Updated width of textbox

--- a/resources-search/style.css
+++ b/resources-search/style.css
@@ -10,7 +10,7 @@ h2 {font-size: 1.4em;}
 
 .ui-menu-item {font-size: 1em; padding-bottom: 10px;}
 
-#tags {color: #8a8a8a; font-size: 1.2em; padding-left: 5px;}
+#tags {color: #8a8a8a; font-size: 1.2em; padding-left: 5px; width: 200px;}
 
 a {color: #119eb9; text-decoration: none;}
 
